# KnockoutKraken

./: .gitignore  .mill-jvm-opts  README.md  build.sbt  build.sc  ensime.sbt  program_page  replace.sh  state
regression/: .gitignore  CMakeLists.txt  runAll.sh
regression/cl_devteroflex/: vivado.jou  vivado_pid4066957.str
regression/cl_devteroflex/design/: cl_axi_flop.sv  cl_axi_rename.sv  cl_axil_flop.sv  cl_common_defines.vh  cl_dma_pcis_slv.sv  cl_dram_dma.sv  cl_dram_dma_axi_mstr.sv  cl_dram_dma_defines.vh  cl_ila.sv  cl_pcis_interconnect.sv  cl_pcis_xbar.sv  cl_xbar.sv  create_dram_xbar.tcl  create_pcis_xbar.tcl  create_xbar.tcl  create_xbar_nested.tcl  devteroflex_top.sv  sh_pcis_and_dram_xbar.tcl
regression/cl_devteroflex/design/axi_interconnect_pcis/: axi_interconnect_pcis.bd  axi_interconnect_pcis.bxml  axi_interconnect_pcis.dcp  axi_interconnect_pcis.tcl  axi_interconnect_pcis_stub.vhdl
regression/cl_devteroflex/design/axi_interconnect_pcis/hw_handoff/: axi_interconnect_pcis.hwh  axi_interconnect_pcis_bd.tcl
regression/cl_devteroflex/design/axi_interconnect_pcis/sim/: axi_interconnect_pcis.protoinst
regression/cl_devteroflex/design/axi_interconnect_pcis/synth/: axi_interconnect_pcis.hwdef
regression/cl_devteroflex/design/axi_interconnect_pcis/ui/: bd_b31671e1.ui
regression/cl_devteroflex/design/cl_dram_xbar/: cl_dram_xbar.bda  cl_dram_xbar.bxml  cl_dram_xbar_stub.vhdl
regression/cl_devteroflex/design/cl_dram_xbar/hw_handoff/: cl_dram_xbar.hwh  cl_dram_xbar_bd.tcl
regression/cl_devteroflex/design/cl_dram_xbar/sim/: cl_dram_xbar.protoinst
regression/cl_devteroflex/design/cl_dram_xbar/synth/: cl_dram_xbar.hwdef
regression/cl_devteroflex/design/cl_xbar/: cl_xbar.bda  cl_xbar.bxml  cl_xbar_stub.v  cl_xbar_stub.vhdl
regression/cl_devteroflex/design/cl_xbar/hdl/: cl_xbar_wrapper.v
regression/cl_devteroflex/design/cl_xbar/hw_handoff/: cl_xbar.hwh  cl_xbar_bd.tcl
regression/cl_devteroflex/design/cl_xbar/sim/: cl_xbar.protoinst  cl_xbar.v
regression/cl_devteroflex/design/cl_xbar/synth/: cl_xbar.hwdef
regression/cl_devteroflex/design/cl_xbar_unified/: cl_xbar.bda  cl_xbar.bxml
regression/cl_devteroflex/design/cl_xbar_unified/hw_handoff/: cl_xbar.hwh  cl_xbar_bd.tcl
regression/cl_devteroflex/design/cl_xbar_unified/sim/: cl_xbar.protoinst
regression/cl_devteroflex/design/cl_xbar_unified/synth/: cl_xbar.hwdef
regression/cl_devteroflex/design/sh_pcis_xbar/: sh_pcis_xbar.bd  sh_pcis_xbar.bda  sh_pcis_xbar.bxml  sh_pcis_xbar.dcp  sh_pcis_xbar_stub.vhdl
regression/cl_devteroflex/design/sh_pcis_xbar/hw_handoff/: sh_pcis_xbar.hwh  sh_pcis_xbar_bd.tcl
regression/cl_devteroflex/design/sh_pcis_xbar/sim/: sh_pcis_xbar.protoinst
regression/cl_devteroflex/software/include/: cl_dram_dma_server.h  sh_dpi_tasks.h
regression/cl_devteroflex/software/runtime/: request_server.c  test_dram_dma.c  test_dram_dma_basic.c  test_dram_dma_hwsw_cosim.c  test_dram_dma_read_after_write.c  test_dram_dma_server.c  test_dram_dma_simple_run.c
regression/cl_devteroflex/verif/scripts/: Makefile.vivado  top.vivado.f  waves.tcl
regression/rtl/: devteroflex_top.sv
regression/src/client/: catch.hpp  fpga.h  fpga_aws.c  fpga_helpers.c  fpga_helpers.h  fpga_interface.c  fpga_interface.h  fpga_rtl.c  ipc.c  ipc.h  main.cpp  meson.build  test-helpers.cc  test-helpers.hh
regression/src/client/runs/: stress-tests.c
regression/src/client/tests/: aws-shell-ops.cc  back-pressure.cc  host-control.cc  load-store.cc  matrix_multiply.cc  memory-ordering.cc  mmu.cc  select-sort.cc  throughput.cc  trace-module.cc  transplants.cc
regression/src/client/tests/asm/: asm_helpers.c  (+16 more)
regression/src/example/: fuck_routine.cc  garbage_client.cc  garbage_server.cc
regression/src/qemu/: Makefile  devteroflex.h  dummy_file  fclose.c  fopen.c  fread.c  getpid.c  loader.c  multi-threadscript.cc  runall.sh  test_cache_page_evict.c  test_fclose.c  test_fopen.c  test_fork.c  test_fread.c  test_getpid.c  test_inst_fetch_segfault.c  test_memsvc_segfault_full.c  test_mmap.c  test_mprotect.c  test_mprotect_segfault.c  test_mprotect_success.c  test_mremap.c  test_multithreading.c  test_mumap.c  test_puts.c  test_read_inst_page_buffer.c  test_read_inst_page_func.c  test_sleep.c
regression/src/qemu/python-test/: main.py  stupid.py
regression/src/server/: dut.cc  dut.hh  ipc.cc  ipc.hh  main.cc  subroutine.cc  subroutine.hh
(+721 files in other folders)
